XB-699 : Technical Debt : QuickLinkBean.java, QuickLinkComparator.java, XPEDXAnonymousQuickLinkAction.java, XPEDXAssignedCustomersLocationsDisplayAction.java, XPEDXCreateCustQLAction.java, XPEDXCustomerAssignmentAction.java, XPEDXCustomerQuickLinkAction.java, XPEDXDeleteArticle.java, XPEDXGetCustLocationList.java, XPEDXGetCustomerOrganizationAction.java, XPEDXGetShipToBillToAction.java, XPEDXGetUserPrefCategoryAssets.java, XPEDXNewUserRegistration.java, XPEDXSaveCustomerInfo.java, XPEDXSaveNewUserInfoValidation.java, XPEDXSaveUserInfo.java, XPEDXSaveUserInfoValidation.java, XPEDXUserGeneralInfo.java, XPEDXUserList.java
----------------------------------- StarTeam -----------------------------------
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXCustomerAssignmentAction.java:1.22.1.1
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXDeleteArticle.java:1.3.1.1
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXGetCustLocationList.java:1.3.1.1
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXGetCustomerOrganizationAction.java:1.3.1.1
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXGetShipToBillToInfoAction.java:1.7.1.1
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/org/XPEDXSaveCustomerInfo.java:1.4.1.1
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/user/QuickLinkBean.java:1.3.1.1
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/user/QuickLinkComparator.java:1.3.1.1
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/user/XPEDXAnonymousQuickLinkAction.java:1.4.1.1
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/user/XPEDXAssignedCustomersLocationsDisplayAction.java:1.4.1.1
M src/WebChannel/main/java/com/sterlingcommerce/xpedx/webchannel/profile/user/XPEDXCreateCustQLAction.java:1.4.1.1
M